# recommendation_system

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
data/: dataset.py  preprocess.py
docker/: Dockerfile.serving  Dockerfile.training
evaluation/: evaluate.py  metrics.py
experiments/: config.yaml  config_test.yaml  resource_monitor.py  sweep.py
models/: baselines.py  ncf.py
serving/: app.py
training/: train_ddp.py  train_single.py
