[project]
name = "recommendation"
version = "0.1.0"
description = "Distributed recommendation system with MLOps focus"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data", "models", "training", "evaluation", "serving", "experiments"]
